--- a/live-html/index.html
+++ b/live-html/index.html
@@ -12,19 +12,33 @@
   <header class="header">
     <div class="container">
       <a href="index.html" class="logo">
-        <img src="img/logo.png" alt="Логотип">
+        <img class="logo__img" src="img/logo.png" alt="Логотип">
         <div class="logo__slogan">Магазин инструмента</div>
       </a>
       <div class="header__right">
         <div class="header__top">
           <ul class="header__list">
-            <li class="header__item">Каталог инструментов</li>
-            <li class="header__item">Все для сада</li>
-            <li class="header__item">Ручной инструмент</li>
-            <li class="header__item">Электрика</li>
-            <li class="header__item">Доставка</li>
-            <li class="header__item">Оплата</li>
-            <li class="header__item">О нас</li>
+            <li class="header__item">
+             <a href="" class="header__link">Каталог инструментов</a> 
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">Все для сада</a>
+             </li>
+            <li class="header__item">
+              <a href="" class="header__link header__link_hide">Ручной инструмент</a>
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">Электрика</a>
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">Доставка</a>
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">Оплата</a>
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">О нас</a>
+            </li>
           </ul>
           <ul class="login__list">
               <li class="login__item">
@@ -77,10 +91,10 @@
                   Время работы:
               </span>
               <span class="contacts__working-hours-value">
-                  10:00 - 19:00
+                  10:00 &mdash; 19:00
               </span>
             </div>
-            <a href="tel:84957212525" class="contacts__phone">8 495 721 25 25</a>
+            <a href="tel:84957212525" class="contacts__phone">8 495 721-25-25</a>
             <div class="contacts__city">
               <span class="city__current">Москва</span>
               <button class="city__button">сменить</button>
